<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_nav_report"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_fleet"
            android:icon="@drawable/ic_nav_fleet"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_track"
            android:icon="@drawable/ic_nav_track"
            android:title="@string/track" />
        <item
            android:id="@+id/nav_available"
            android:icon="@drawable/ic_nav_available"
            android:title="@string/available" />
    </group>
</menu>